--- a/library.properties
+++ b/library.properties
@@ -1,1 +1,10 @@
+name=iarduino_RTC
+version=1.0.0
+author=
+maintainer=Alex, Beem, <arduino@orviss.ru>
+sentence=DS3231 RTC
+paragraph=This library to DS3231 motule and etc
+category=Other
+url=https://github.com/alexbeem/iarduino_RTC
+architectures=avr
 
